--- a/.github/workflows/cd-h2.yml
+++ b/.github/workflows/cd-h2.yml
@@ -1,5 +1,9 @@
 name: CD (H2)
 
+permissions:
+  id-token: write # OIDC token
+  contents: read
+
 on:
   push:
     branches: ["main"]
@@ -48,16 +52,15 @@ jobs:
           cache-to: type=gha,mode=max
 
   deploy:
-    name: Deploy to EC2 (SSM + AccessKey)
+    name: Deploy to EC2 (SSM + OIDC)
     runs-on: ubuntu-latest
     needs: build-and-push
     if: ${{ github.event_name == 'push' || inputs.deploy }}
     steps:
-      - name: Configure AWS credentials (Access Key)
+      - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::${{secrets.ACCOUNT_ID}}:role/LunchCICDRole
           aws-region: ap-northeast-2
 
       - name: Deploy via SSM
@@ -114,3 +117,70 @@ jobs:
             --output json
 
           exit $WAIT_RC
+
+#    name: Deploy to EC2 (SSM + AccessKey)
+#    runs-on: ubuntu-latest
+#    needs: build-and-push
+#    if: ${{ github.event_name == 'push' || inputs.deploy }}
+#    steps:
+#      - name: Configure AWS credentials (Access Key)
+#        uses: aws-actions/configure-aws-credentials@v4
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          aws-region: ap-northeast-2
+#
+#      - name: Deploy via SSM
+#        env:
+#          REGION: ap-northeast-2
+#          INSTANCE_ID: ${{ secrets.EC2_INSTANCE_ID }}
+#          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+#          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+#        run: |
+#          set -euo pipefail
+#
+#          cat > ssm-params.json <<JSON
+#          {
+#            "commands": [
+#              "set -euo pipefail",
+#              "docker version",
+#              "echo \"$DOCKERHUB_TOKEN\" | docker login -u \"$DOCKERHUB_USERNAME\" --password-stdin",
+#              "docker pull \"$DOCKERHUB_USERNAME/lunch-app:latest\"",
+#              "docker stop lunch-app || true",
+#              "docker rm lunch-app || true",
+#              "docker run -d --name lunch-app -p 8080:8080 -e \"SPRING_DATASOURCE_URL=jdbc:h2:mem:lunch;MODE=MySQL\" -e \"SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.h2.Driver\" -e \"SPRING_JPA_DATABASE_PLATFORM=org.hibernate.dialect.H2Dialect\" -e \"SPRING_JPA_HIBERNATE_DDL_AUTO=create\" -e \"SPRING_FLYWAY_ENABLED=false\" --restart always \"$DOCKERHUB_USERNAME/lunch-app:latest\"",
+#              "docker ps | grep lunch-app",
+#              "docker logs --tail 50 lunch-app || true"
+#            ]
+#          }
+#          JSON
+#
+#          COMMAND_ID=$(
+#            aws ssm send-command \
+#              --region "$REGION" \
+#              --instance-ids "$INSTANCE_ID" \
+#              --document-name "AWS-RunShellScript" \
+#              --comment "Deploy lunch-app" \
+#              --parameters file://ssm-params.json \
+#              --query "Command.CommandId" \
+#              --output text
+#          )
+#
+#          echo "SSM CommandId: $COMMAND_ID"
+#
+#          set +e
+#          aws ssm wait command-executed \
+#            --region "$REGION" \
+#            --command-id "$COMMAND_ID" \
+#            --instance-id "$INSTANCE_ID"
+#          WAIT_RC=$?
+#          set -e
+#
+#          aws ssm get-command-invocation \
+#            --region "$REGION" \
+#            --command-id "$COMMAND_ID" \
+#            --instance-id "$INSTANCE_ID" \
+#            --query "{Status:Status,ResponseCode:ResponseCode,Stdout:StandardOutputContent,Stderr:StandardErrorContent}" \
+#            --output json
+#
+#          exit $WAIT_RC
